--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title : Elementary - Jekyll Blog Theme
 name: 'Elementary Jekyll Theme'
 description: 'Simple, light weight, responsive jekyll theme for hackers'
-
+baseurl: /personal-blog
 markdown: kramdown
 highlighter: rouge
 javascript_enabled: true
